# rust-brotli-decompressor

./: .gitattributes  .travis.yml  Cargo.toml  README.md
c/: Cargo.toml  Makefile  main.c
c/brotli/: decode.h
examples/: decompress.rs
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: decompress_into_fixed.rs  decompress_into_vec.rs  decompress_with_dictionaries.rs  differential_dictionaries.rs
scripts/dict_corpus/: generate.py  harness.c
src/: brotli_alloc.rs  decode.rs  lib.rs  memory.rs  prefix.rs  reader.rs  shared_dictionary.rs  state.rs  test.rs  transform.rs  writer.rs
src/bit_reader/: billing.rs  mod.rs
src/dictionary/: mod.rs
src/entropy/: billing.rs  huffman.rs  interface.rs  log4096.py  log4096.rs  mod.rs  tee.rs
src/ffi/: alloc_util.rs  interface.rs  mod.rs
src/huffman/: histogram.rs  mod.rs
src/probability/: blend_cdf.rs  common_tests.rs  external_cdf.rs  frequentist_cdf.rs  interface.rs  mod.rs  opt_frequentist_cdf.rs  weights.rs
testdata/: fuzz502  fuzz502.compressed  issue42.compressed  issue42.dict  random1024  random1024.br  reducetostream.map  reducetostream.map.compressed  shared_content  shared_context.compressed  shared_context.dict  shared_custom.compressed  shared_custom.dict
testdata/dict_corpus/: case00.content  case00.q11w18.br  case00.q5w12.br  case00.serialized.dict  case01.content  case01.q11w22.br  case01.q5w18.br  case01.serialized.dict  case02.content  case02.q11w12.br  case02.q5w22.br  case02.serialized.dict  case03.content  case03.q11w18.br  case03.q5w12.br  case03.serialized.dict  case04.content  case04.q11w22.br  case04.q5w18.br  case04.serialized.dict  case05.content  case05.q11w12.br  case05.q5w22.br  case05.serialized.dict  case06.content  case06.q11w18.br  case06.q5w12.br  case06.serialized.dict  case07.content  case07.q11w22.br  case07.q5w18.br  case07.serialized.dict  raw00.content  raw00.q9w10.br  raw00.raw.dict  raw01.content  raw01.q11w16.br  raw01.raw.dict  raw02.content  raw02.q9w22.br  (+4 more)
