[package]
name = "brotli-decompressor"
version = "5.0.2"

authors = ["Daniel Reiter Horn <danielrh@dropbox.com>", "The Brotli Authors"]
description = "A brotli decompressor that with an interface avoiding the rust stdlib. This makes it suitable for embedded devices and kernels. It is designed with a pluggable allocator so that the standard lib's allocator may be employed. The default build also includes a stdlib allocator and stream interface. Disable this with --features=no-stdlib. Alternatively, --features=unsafe turns off array bounds checks and memory initialization but provides a safe interface for the caller.  Without adding the --features=unsafe argument, all included code is safe. For compression in addition to this library, download https://github.com/dropbox/rust-brotli "
license = "BSD-3-Clause/MIT"
documentation = "https://github.com/dropbox/rust-brotli-decompressor/blob/master/README.md"
homepage = "https://github.com/dropbox/rust-brotli-decompressor"
repository = "https://github.com/dropbox/rust-brotli-decompressor"
keywords = ["brotli", "decompression", "lz77", "huffman", "nostd"]
readme = "README.md"
exclude = ["testdata/*"]
autobins = false

[[bin]]
doc = false
name = "brotli-decompressor"

[profile.release]
incremental=false
lto=true

[dependencies]
# Compatible with both the 2.x and 3.x generations of alloc-no-stdlib.
# 3.0.0 gates the C calloc backing store behind its "unsafe" feature; the
# lib only uses the always-available StackAllocator/Allocator/SliceWrapper
# traits, and the "seccomp" feature below forwards alloc-no-stdlib/unsafe for
# the calloc path.
"alloc-no-stdlib" = {version=">=2.0.4, <4"}
"alloc-stdlib" = {version=">=0.2.2, <0.4", optional=true}

[features]
# alloc-no-stdlib 3.x gates CallocBackingStore behind its "unsafe" feature;
# the seccomp binary uses it via define_allocator_memory_pool!(.., calloc).
# Harmless under 2.x, where the type is always available.
seccomp = ["alloc-no-stdlib/unsafe"]
default=["std"]
std = ["alloc-stdlib"]
unsafe = ["alloc-no-stdlib/unsafe", "alloc-stdlib/unsafe"]
pass-through-ffi-panics = []
disable-timer = []
benchmark = []
ffi-api = []
