[package]
name = "brotli-decompressor-fuzz"
version = "0.0.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.brotli-decompressor]
path = ".."

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
# Links the reference C implementation (from a google/brotli checkout, see
# build.rs) into the fuzz binary for the differential targets.
c-compat = ["dep:cc"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decompress_into_vec"
path = "fuzz_targets/decompress_into_vec.rs"
test = false
doc = false

[[bin]]
name = "decompress_into_fixed"
path = "fuzz_targets/decompress_into_fixed.rs"
test = false
doc = false

[[bin]]
name = "decompress_with_dictionaries"
path = "fuzz_targets/decompress_with_dictionaries.rs"
test = false
doc = false

[[bin]]
name = "differential_dictionaries"
path = "fuzz_targets/differential_dictionaries.rs"
test = false
doc = false
required-features = ["c-compat"]
