[package]
name = "brotli-decompressor-fuzz"
version = "0.0.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.brotli-decompressor]
path = ".."

[features]
# Links the system brotli (>= 1.1.0, e.g. libbrotli-dev; see build.rs) into
# the fuzz binary for the differential targets.
c-compat = []

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decompress_into_vec"
path = "fuzz_targets/decompress_into_vec.rs"
test = false
doc = false

[[bin]]
name = "decompress_into_fixed"
path = "fuzz_targets/decompress_into_fixed.rs"
test = false
doc = false

[[bin]]
name = "decompress_with_dictionaries"
path = "fuzz_targets/decompress_with_dictionaries.rs"
test = false
doc = false

[[bin]]
name = "differential_dictionaries"
path = "fuzz_targets/differential_dictionaries.rs"
test = false
doc = false
required-features = ["c-compat"]
